added CORS config